// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text should render 1`] = `
<span
  style={Object {}}
>
  __TEXT__
</span>
`;

exports[`Text should render with fontSize and fontWeight 1`] = `
<span
  style={
    Object {
      "fontSize": "10px",
      "fontWeight": 400,
    }
  }
>
  __TEXT__
</span>
`;
